# rooty

./: .gitignore  Makefile  Makefile.am  README  autojunk.sh  client.py  configure.ac  rooty  rooty.c  rooty.h
ccdc/: client.py  rooty-debug.x64  rooty-release.x64  rooty-upx.x64
extras/: deploy.sh  make_static.sh
msf/: install_rooty.rb  rooty.rb
src/: Makefile  Makefile.am  Makefile.dev  Makefile.old  fork_stub-x64.asm  make_fork_stub.sh  make_static.openbsd.sh  make_static.sh  rooty.c  rooty.h  rooty_unix.c  rooty_unix.h  rooty_win.c  rooty_win.h
